--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     ],
     "require": {
         "azonmedia/components": "dev-master",
+        "azonmedia/exceptions": "dev-master",
+        "azonmedia/translator": "dev-master",
         "php": ">=7.2.0"
     },
     "autoload": {
